Remove code to 'fix bootstrap 4' containers on mobile

--- a/timestrap/static_src/sass/_globals.scss
+++ b/timestrap/static_src/sass/_globals.scss
@@ -1,13 +1,3 @@
-// Fix bootstrap v4 not positioning xs nav bar stuff properly
-// TODO: Learned that bootstrap 4 is not at fault here it's the classes I used
-@media (max-width: 576px) {
-    .container {
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
-
 // Fix bootstrap v4 not using pointer on some objects
 a,
 button {
